apps/torrus/overlays/dev/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: torrus
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: torrus
          imagePullPolicy: Always
          # (only dev pulls each time; prod will pin digests later)
